images loaded + load more functionality

--- a/presentation/css/master.less
+++ b/presentation/css/master.less
@@ -1,1 +1,11 @@
 @import '../bower_components/bootstrap/less/bootstrap';
+
+#post-target{
+	padding-bottom: 40px;
+	.post-template{
+		padding-bottom: 30px;
+		img{
+			margin: 0 auto;
+		}
+	}
+}
