masonry and lightbox added

--- a/the_project/css/master.less
+++ b/the_project/css/master.less
@@ -1,6 +1,11 @@
 @import '../bower_components/bootstrap/less/bootstrap';
 @icon-font-path: '../bower_components/bootstrap/fonts/';
+@import '../bower_components/lightbox/css/lightbox.css';
+@import 'fix-lightbox';
+
 
 div.jumbotron{
 	background: transparent url('../images/camels-hump-cc0.png') center center no-repeat;
 }
+
+@import 'template-gallery';
