--- a/the_project/css/template-gallery.less
+++ b/the_project/css/template-gallery.less
@@ -5,7 +5,7 @@ section#gallery{
 		a{
 			display: block;
 			background: black;
-			border: 6px solid black;
+			border: 6px solid @dark-wood;
 			img{
 				margin: 0 auto;
 			}
