layout of home and contact pages

--- a/the_project/css/master.less
+++ b/the_project/css/master.less
@@ -33,6 +33,19 @@ header{
 	}
 }
 
+footer{
+	margin-top: 40px;
+	padding: 20px 0;
+	border-top: 4px solid @dark-wood;
+	border-bottom: 4px solid @dark-wood;
+	ul.address{
+		margin: 0;
+		padding: 0;
+		list-style-type: none;
+		font-size: .8em;
+	}
+}
+
 @import 'template-home';
 @import 'template-gallery';
 @import 'template-contact';
